samples/_failures_safe/1761274339_fbecd1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37633341.c: In function ‘main’:
./samples/SAFE/__tmp_37633341.c:168:9: error: expected expression at end of input
  168 |         handle_eof,
      |         ^~~~~~~~~~
./samples/SAFE/__tmp_37633341.c:168:9: error: expected declaration or statement at end of input
